# Pan-Detection

./: README.md  pyproject.toml
pan-detection/pan_detection/.ipynb_checkpoints/: pan_card_tampering-checkpoint.ipynb
pan_detection/: pan_card_tampering.ipynb
