[tool.poetry]
name = "pan-detection"
version = "0.1.0"
description = ""
authors = ["Imogensole <imogensole02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-image = "^0.24.0"
imutils = "^0.5.4"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
